<resources>
    <string name="app_name">Pesaing</string>
    <string name="splashscreen">splash screen pesaing</string>
    <string name="login_title">Login</string>
    <string name="email_string">Masukan Email</string>
    <string name="password_string">Masukan Password</string>
    <string name="login_button">Login</string>
    <string name="switch_button">Simpan Akun</string>
    <string name="title_activity_register">Daftar Sekarang</string>
    <string name="name_string">Nama Lengkap</string>
    <string name="phone_num_string">Nomor Handphone</string>
    <string name="home">Home</string>
    <string name="cart">Keranjang</string>
    <string name="riwayat">Riwayat</string>
    <string name="keluar">Logout</string>
    <string name="confirm_password">Konfirmasi Ulang Password</string>
    <string name="text_milikakun">Apakah Anda Sudah Memiliki Akun?</string>
    <string name="button_Google">Lanjutkan dengan Google</string>
    <string name="daftarkan_produk">Daftarkan Produk Anda</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="inp_product_name">Nama Produk</string>
    <string name="kategori">Kategori</string>
    <string name="harga">Harga</string>
    <string name="inp_harga">Harga</string>
    <string name="satuan">Satuan</string>
    <string name="inp_product">Tambah Barang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="inp_stok">Stok</string>
    <string-array name="dropDown_kategori">
        <item>Sayuran</item>
        <item>Buah</item>
        <item>Daging</item>
        <item>Bumbu</item>
        <item>Ikan</item>
        <item>Ayam</item>
        <item>Kue</item>
    </string-array>
    <string-array name="dropDown_satuan">
        <item>Kg</item>
        <item>gram</item>
        <item>Ikat</item>
    </string-array>
    <string name="title_activity_edit_barang">EditBarang</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="btn_update">Update Produk</string>
    <string name="edit_produk">Update Produk Anda</string>
    <string name="title_Login">Login</string>
    <string name="delete_produk">Hapus Produk Anda</string>
    <string name="update_produk">Edit</string>
    <string name="hapus_produk">Hapus</string>
    <string name="btn_delete">delete</string>
    <string name="rv_listbarang">List Barang</string>
    <string name="inp_image">Input Gambar Barang</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="share_my_location">Share Lokasi Saya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_daftarkan_barang">Ingin Masukkan Barang?</string>
    <string name="text_mp_btn">Masukkan Barang</string>
    <string name="text_lapak">Lapak Saya</string>
    <string name="nama_pdg">Nama Pedagang</string>
    <string name="no_pdg">Nomor Pedagang</string>
    <string name="txt_akun_pdg">Akun Pedagang</string>
    <string name="riwayat_pesanan_pdg">Riwayat Pesanan</string>
    <string name="ganti_pass_pdg">Ganti Password</string>
    <string name="saldo_pdg">Saldo Kamu</string>
    <string name="logout_pdg">Keluar/Ganti Akun</string>
    <string name="langSet_pdg">Ganti Bahasa</string>
    <string name="txt_pre_login">Halo, Mitra PESAING!</string>
    <string name="txt_pre_login2">Jika sudah memiliki akun</string>
    <string name="txt_to_login">Masuk</string>
    <string name="txt_hak_cipta">Hak Cipta oleh PT Bornew Tech</string>
    <string name="txt_version">v0.1</string>
    <string name="txt_finish_regist">Yeayy, Berhasil Daftar</string>
    <string name="txt_finish_regist2">Yuk! Lanjut masuk ke Aplikasinya</string>
    <string name="btn_finish_regist">Masuk Sekarang</string>
    <string name="gambar_praregis">Gambar Pra Registrasi</string>
    <string name="selamatDatang">Selamat Datang di PESAING!</string>
    <string name="mariKolaborasi">Mari berkolaborasi bersama kami agar kamu bisa memperluas usahamu.</string>
    <string name="regis_mitra">Sebagai Mitra</string>
    <string name="regis_pembeli">Sebagai Pengguna Umum</string>
    <string name="text_regis">Registrasi</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="pas_foto">Pasang foto kamu disini.</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="nama_ubah">Nama</string>
    <string name="konfirm_pw">Konfirmasi Password</string>
    <string name="txt_ganti_pass">Ubah Password</string>
    <string name="tombol_back">Tombol Kembali</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="tombol_edit">Tombol Edit</string>
    <string name="title_activity_maps_pembeli">MapsPembeli</string>
    <string name="account">Akun Pengguna</string>
    <string name="pesanan">Pesanan</string>
    <string name="title_activity_maps_pesaing">MapsPesaing</string>
    <string name="google_maps_api_key">AIzaSyCR4ayz7SHwNi36uHScjg4F3eieOt5PYcA</string>
    <string name="title_activity_maps">Maps Pesaing</string>
    <string name="normal_type">Default</string>
    <string name="satellite_type">Satelite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome2">Mau Belanja Apa Hari Ini?</string>
    <string name="new_order">Orderan Baru</string>
    <string name="otw"><![CDATA[Sedang Dalam Perjalanan]]></string>
    <string name="list_of_category">List of Category</string>
    <string name="best_seller">Penjualan Terlaku</string>
    <string name="title_barang_pedagang">Barang Anda</string>
    <string name="riwayat_pesanan">Pesanan Masuk</string>
    <string name="akun_pedagang">Akun Anda</string>
    <string name="btn_finish_regis_Pembeli">Masuk Sebagai Pembeli</string>
    <string name="btn_finish_regis_Pedagang">Masuk Sebagai Pedagang</string>
    <string name="txt_to_loginPembeli">Masuk Sebagai Pembeli</string>
    <string name="txt_to_loginPedagang">Masuk Sebagai Pedagang</string>
    <string name="text_login">Login</string>
    <string name="address_string">Masukkan Alamat</string>

</resources>