<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterPedagang">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_activity_register"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/mobile_register_img"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/name_string"
            app:startIconDrawable="@drawable/ic_outline_person_24">
            <EditText
                android:id="@+id/tv_sellername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/phone_num_string"
            app:startIconDrawable="@drawable/ic_outline_phone_24">
            <EditText
                android:id="@+id/tv_sellerphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/email_string"
            app:startIconDrawable="@drawable/ic_outline_email_24">
            <EditText
                android:id="@+id/tv_selleremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/password_string"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/tv_sellerpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/ic_outline_lock_24"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/tv_confirmsellerpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/title_activity_register"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_milikakun"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/btn_login"
            style="@style/OutlinedRoundedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login_button"/>
    </LinearLayout>

</ScrollView>